k8s/k8s-api.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minion
spec:
  rules:
  - http:
      paths:
      - path: /v1/minion
        backend:
          serviceName: minion
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: minion
  labels:
    app: minion
    tier: api
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '8080'
    prometheus.io/path:   '/v1/minion/metrics'
spec:
  selector:
    app: minion
    tier: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minion
  labels:
    app: minion
    tier: api
spec:
  selector:
    matchLabels:
      app: minion
      tier: api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: minion
        tier: api
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: minion
        image: hub.docker.com/yaleits/minion
        volumeMounts:
        - name: minion-config
          mountPath: "/app/config"
          readOnly: true
        livenessProbe:
          httpGet:
            path: /v1/minion/ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 3
      volumes:
      - name: minion-config
        secret:
          secretName: minion-config-json
        # envFrom:
        #   - configMapRef:
        #       name: minion-config
        #   - secretRef:
        #       name: minion-secrets
